--- a/lintie/Info.plist
+++ b/lintie/Info.plist
@@ -4,11 +4,15 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>徐静蕾手写字体.ttf</string>
+		<string>井柏然手写体.ttf</string>
 		<string>启功字体.ttf</string>
+		<string>徐静蕾手写体.ttf</string>
+		<string>德彪行书.ttf</string>
+		<string>毛泽东学书.ttf</string>
 		<string>田英章楷书.ttf</string>
 		<string>田英章行书.ttf</string>
-		<string>田英章楷书简(字体).ttf</string>
+		<string>赵九江行书.ttf</string>
+		<string>雪纯字体.ttf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
